--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
        <img src="img/minionsmovie.png" alt="header image" id="hd-img">
        <nav class="container col-3">
            <ul>
-               <li>HOME</li>
-               <li>CAST</li>
-               <li>BUY TICKETS</li>
+               <li><a href="index.html">HOME</a></li>
+               <li><a href="spec.html">CAST</a></li>
+               <li><a href="buytickets.html">BUY TICKETS</a></li>
            </ul>
        </nav>
  </header>
