--- a/spec.html
+++ b/spec.html
@@ -13,9 +13,9 @@
        <img src="img/minionsmovie.png" alt="header image" id="hd-img">
        <nav class="container col-3">
            <ul>
-               <li><a href="index.html">HOME</a></li>
-               <li><a href="spec.html">CAST</a></li>
-               <li><a href="buytickets.html">BUY TICKETS</a></li>
+               <li class="element"><a href="index.html">HOME</a></li>
+               <li class="element"><a href="spec.html">CAST</a></li>
+               <li class="element"><a href="buytickets.html">BUY TICKETS</a></li>
            </ul>
        </nav>
  </header>
