--- a/buytickets.html
+++ b/buytickets.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Minions: The Movie | Index</title>
+    <title>Minions: The Movie | Buy Tickets</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/style.css">
@@ -14,9 +14,9 @@
        <img src="img/minionsmovie.png" alt="header image" id="hd-img">
        <nav class="container col-3">
            <ul>
-               <li><a href="index.html">HOME</a></li>
-               <li><a href="spec.html">CAST</a></li>
-               <li><a href="buytickets.html">BUY TICKETS</a></li>
+               <li class="element"><a href="index.html">HOME</a></li>
+               <li class="element"><a href="spec.html">CAST</a></li>
+               <li class="element"><a href="buytickets.html">BUY TICKETS</a></li>
            </ul>
        </nav>
   </header>
