--- a/spec.html
+++ b/spec.html
@@ -29,7 +29,8 @@
              <img src="img/scarlet.jpg" class="actor-pic" alt="character">
          </div>
          <div class="col-6">
-             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, at iste consectetur facilis. Esse temporibus animi accusantium voluptas provident, enim ad vero. Assumenda sed nam, cumque laboriosam aliquid libero repudiandae.</p>
+            <h3>Sandra Bullock as "Scarlet Overkill"</h3>
+            <p><strong>Scarlet Overkill</strong> is the main antagonist in <strong>Minions</strong>, voiced by Sandra Bullock. She is the wife of <strong>Herb Overkill</strong> and an extremely well-known supervillain.</p>
          </div>
     </div>
      <div class="row justify-content-center">
@@ -40,7 +41,8 @@
              <img src="img/herb.jpg" class="actor-pic" alt="character">
          </div>
          <div class="col-6">
-             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, at iste consectetur facilis. Esse temporibus animi accusantium voluptas provident, enim ad vero. Assumenda sed nam, cumque laboriosam aliquid libero repudiandae.</p>
+            <h3>Jon Hamm as "Herb Overkill"</h3>
+            <p><strong>Herb Overkill</strong> is the secondary antagonist in the movie <strong>Minions</strong>. He is the husband of <strong>Scarlet Overkill</strong> and an inventor who helps create her various weapons alongside other inventions.</p>
          </div>
     </div>
      <div class="row justify-content-center">
@@ -51,18 +53,20 @@
              <img src="img/walter.jpg" class="actor-pic" alt="character">
          </div>
          <div class="col-6">
-             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, at iste consectetur facilis. Esse temporibus animi accusantium voluptas provident, enim ad vero. Assumenda sed nam, cumque laboriosam aliquid libero repudiandae.</p>
+            <h3>Michael Keaton as "Walter Nelson"</h3>
+            <p><strong>Walter Nelson Sr.</strong> is a minor character in <strong>Minions</strong>. He is the father and leader of the Nelson family, who gave Kevin, Stuart and Bob a ride to Orlando.</p>
          </div>
     </div>
 </div>
 <div class="container">
  <div class="story-line">
      <h2>Story Line</h2>
-     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur distinctio placeat in tenetur sapiente possimus provident hic et nihil deleniti, delectus assumenda corporis, vel animi voluptatum necessitatibus laudantium illo cumque.</p>
+     <p><strong>Minions</strong> are small, yellow pill-like creatures who have existed since the beginning of time, evolving from single-celled organisms into beings who have only one purpose: to serve history's most despicable masters. After accidentally destroying all their masters, including a Tyrannosaurus Rex, a caveman, an Egyptian pharaoh, Count Dracula, and Napoleon Bonaparte, they decide to isolate themselves from the world and start a new civilization in a snowy cave. By 1968, the lack of a master drives them into depression, causing Minion Kevin to set out to find a new master. He is joined by Minions Stuart (who unwittingly was selected) and Bob (due to a lack of volunteers). <br>
+     The <strong>Minions</strong> arrive at New York, where during their stay in Fancy's, they learn about Villain-Con, a villain convention where supervillains from around the world gather, and it will be held in Orlando, Florida. They manage to hitch a ride to Orlando, where coincidentally, <strong>Walter</strong> and <strong>Madge Nelson</strong> with their children (<strong>Walter Jr.</strong>, <strong>Tina</strong>, and <strong>Binky</strong>) drove them were criminals heading to Villain-Con as well. After meeting various supervillains, they become the henchmen for <strong>Scarlet Overkill</strong>, the world's first female supervillain.</p>
  </div>
  <div class="details">
      <h2>Details</h2>
-     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis suscipit quasi recusandae magni, fugiat veritatis, ipsum officiis quo fugit enim harum aliquam, cum quam nihil beatae. Nostrum sequi earum repellat!</p>
+     <p>Country: USA <br> Language: English <br>Duration: 91 min. <br>Budget: $74.000.000</p>
  </div>
 </div>       
        
