--- a/index.html
+++ b/index.html
@@ -12,23 +12,24 @@
 <body>
  <header class="container-fluid">
        <img src="img/minionsmovie.png" alt="header image" id="hd-img">
-       <nav class="container col-3">
-           <ul>
-               <li class="element"><a href="index.html">HOME</a></li>
-               <li class="element"><a href="spec.html">CAST</a></li>
-               <li class="element"><a href="buytickets.html">BUY TICKETS</a></li>
+       <nav>
+           <ul class="col-12 justify-content-center top-nav">
+               <li class="element col-1"><a href="index.html">HOME</a></li>
+               <li class="element col-1"><a href="spec.html">CAST</a></li>
+               <li class="element col-2"><a href="buytickets.html">BUY TICKETS</a></li>
            </ul>
        </nav>
  </header>
     <main class="align-self-center">
         <div class="container trailer">
+           <h1>MINIONS MOVIE</h1>
             <iframe width="960" height="540" src="https://www.youtube.com/embed/P9-FCC6I7u0?t=05s" frameborder="0" allowfullscreen></iframe>
         </div>
-        <div class="row">
-            <div class="container col-6">
+        <div class="row justify-content-center">
+            <div class="col-4">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam quisquam repellat quaerat fugit soluta sapiente officiis libero ducimus fugiat obcaecati, optio laudantium, atque nam tempora totam velit qui nesciunt voluptate!</p>
             </div>
-            <div class="container col-6">
+            <div class="col-4">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam quisquam repellat quaerat fugit soluta sapiente officiis libero ducimus fugiat obcaecati, optio laudantium, atque nam tempora totam velit qui nesciunt voluptate!</p>
             </div>
         </div>
@@ -42,35 +43,34 @@
 
     </main>
     <footer>
-
         <div class="row justify-content-center">
           <div class="col-3 text-center">
-            <i class="fa fa-facebook-square fa-4x" aria-hidden="true"></i>
-            <i class="fa fa-twitter-square fa-4x" aria-hidden="true"></i>
-            <i class="fa fa-pinterest-square fa-4x" aria-hidden="true"></i>
-            <i class="fa fa-google-plus-square fa-4x" aria-hidden="true"></i>
-            <i class="fa fa-instagram fa-4x" aria-hidden="true"></i>
-            <i class="fa fa-youtube-square fa-4x" aria-hidden="true"></i>
+            <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
+            <i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i>
+            <i class="fa fa-pinterest-square fa-2x" aria-hidden="true"></i>
+            <i class="fa fa-google-plus-square fa-2x" aria-hidden="true"></i>
+            <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
+            <i class="fa fa-youtube-square fa-2x" aria-hidden="true"></i>
           </div>
         </div>
         <div class="row justify-content-center">
           <div class="col-6 text-center">
             <ul>
-              <li><a href="http://www.parentalguide.org" target="_blank">PARENTALGUIDE.ORG</a></li>
+              <li><a  class=ftl href="http://www.parentalguide.org" target="_blank">PARENTALGUIDE.ORG</a></li>
               <li>|</li>
-              <li><a href="http://www.filmratings.com" target="_blank">FILMRATINGS.COM</a></li>
+              <li><a  class=ftl href="http://www.filmratings.com" target="_blank">FILMRATINGS.COM</a></li>
               <li>|</li>
-              <li><a href="http://www.mpaa.org" target="_blank">MPAA.ORG</a></li>
+              <li><a  class=ftl href="http://www.mpaa.org" target="_blank">MPAA.ORG</a></li>
               <li>|</li>
-              <li><a href="http://www.reald.com" target="_blank">REALD.COM</a></li>
+              <li><a  class=ftl href="http://www.reald.com" target="_blank">REALD.COM</a></li>
             </ul>
           </div> 
         </div>
         <div class="row justify-content-center">
-          <div class="col-6 text-center img-footer">
-            <img src="img/rating.svg" alt="rating page">
-            <img src="img/illumination.png" alt="illumination page">
-            <img src="img/universal.png" alt="universal studios">
+          <div class="col-4 text-center img-footer">
+            <img class="col-4 footer-img" src="img/rating.svg" alt="rating page">
+            <img class="col-4 footer-img" src="img/illumination.png" alt="illumination page">
+            <img class="col-4 footer-img" src="img/universal.png" alt="universal studios">
           </div>
         </div>
       
