--- a/spec.html
+++ b/spec.html
@@ -9,13 +9,13 @@
     <link rel="shorcut icon" href="img/favicon.png">
 </head>
 <body>
- <header class="container-fluid">
+  <header class="container-fluid">
        <img src="img/minionsmovie.png" alt="header image" id="hd-img">
-       <nav class="container col-3">
-           <ul>
-               <li class="element"><a href="index.html">HOME</a></li>
-               <li class="element"><a href="spec.html">CAST</a></li>
-               <li class="element"><a href="buytickets.html">BUY TICKETS</a></li>
+       <nav>
+           <ul class="col-12 justify-content-center top-nav">
+               <li class="element col-1"><a href="index.html">HOME</a></li>
+               <li class="element col-1"><a href="spec.html">CAST</a></li>
+               <li class="element col-2"><a href="buytickets.html">BUY TICKETS</a></li>
            </ul>
        </nav>
  </header>
@@ -83,34 +83,35 @@
     <footer>
         <div class="row justify-content-center">
           <div class="col-3 text-center">
-            <i class="fa fa-facebook-square fa-4x" aria-hidden="true"></i>
-            <i class="fa fa-twitter-square fa-4x" aria-hidden="true"></i>
-            <i class="fa fa-pinterest-square fa-4x" aria-hidden="true"></i>
-            <i class="fa fa-google-plus-square fa-4x" aria-hidden="true"></i>
-            <i class="fa fa-instagram fa-4x" aria-hidden="true"></i>
-            <i class="fa fa-youtube-square fa-4x" aria-hidden="true"></i>
+            <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
+            <i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i>
+            <i class="fa fa-pinterest-square fa-2x" aria-hidden="true"></i>
+            <i class="fa fa-google-plus-square fa-2x" aria-hidden="true"></i>
+            <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
+            <i class="fa fa-youtube-square fa-2x" aria-hidden="true"></i>
           </div>
         </div>
         <div class="row justify-content-center">
           <div class="col-6 text-center">
             <ul>
-              <li><a href="http://www.parentalguide.org" target="_blank">PARENTALGUIDE.ORG</a></li>
+              <li><a  class=ftl href="http://www.parentalguide.org" target="_blank">PARENTALGUIDE.ORG</a></li>
               <li>|</li>
-              <li><a href="http://www.filmratings.com" target="_blank">FILMRATINGS.COM</a></li>
+              <li><a  class=ftl href="http://www.filmratings.com" target="_blank">FILMRATINGS.COM</a></li>
               <li>|</li>
-              <li><a href="http://www.mpaa.org" target="_blank">MPAA.ORG</a></li>
+              <li><a  class=ftl href="http://www.mpaa.org" target="_blank">MPAA.ORG</a></li>
               <li>|</li>
-              <li><a href="http://www.reald.com" target="_blank">REALD.COM</a></li>
+              <li><a  class=ftl href="http://www.reald.com" target="_blank">REALD.COM</a></li>
             </ul>
           </div> 
         </div>
         <div class="row justify-content-center">
-          <div class="col-6 text-center img-footer">
-            <img src="img/rating.svg" alt="rating page">
-            <img src="img/illumination.png" alt="illumination page">
-            <img src="img/universal.png" alt="universal studios">
+          <div class="col-4 text-center img-footer">
+            <img class="col-4 footer-img" src="img/rating.svg" alt="rating page">
+            <img class="col-4 footer-img" src="img/illumination.png" alt="illumination page">
+            <img class="col-4 footer-img" src="img/universal.png" alt="universal studios">
           </div>
-        </div> 
+        </div>
+
     </footer>
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
