--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
         </div>
         <div class="row justify-content-center">
             <div class="col-4">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam quisquam repellat quaerat fugit soluta sapiente officiis libero ducimus fugiat obcaecati, optio laudantium, atque nam tempora totam velit qui nesciunt voluptate!</p>
+                <h3>Minions</h3>
+                <p>The <strong>Minions</strong> are small, yellow, cylindrical creatures, who have one or two eyes. They are the signature characters of the Despicable Me series. They bring much of the comedy in the film, and they are known as the scene-stealer of the movie. Frequently, they speak in an incomprehensible language, called Minionese, occasionally switching to English. They are much childish in some ways, yet they seem to be very intelligent in certain aspects.</p>
             </div>
             <div class="col-4">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam quisquam repellat quaerat fugit soluta sapiente officiis libero ducimus fugiat obcaecati, optio laudantium, atque nam tempora totam velit qui nesciunt voluptate!</p>
+                <h3>The Film</h3>
+                <p>Minions <strong>Stuart</strong>, <strong>Kevin</strong> and <strong>Bob</strong> are recruited by <strong>Scarlet Overkill</strong>, a super-villain who, alongside her inventor husband Herb, hatches a plot to take over the world.</p>
             </div>
         </div>
         <div class="row">
